# iot-ai-agent

./: .gitignore  IOT_DATA_SPECIFICATION.md  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
IotDevice/: platformio.ini
IotDevice/src/: main.cpp
ai-agent/: .env.example  README.md  main.py  pyproject.toml  run_dev.py  test_agent.py  test_dev_graph_review.py  test_integration.py  test_running_check_node.py  test_subscriber.py
ai-agent/agent/: dev_graph.py  graph.py  state.py  tools.py
ai-agent/api/: events.py  routes.py
ai-agent/iot/: subscriber.py
docs/: architecture.drawio  describe.md  multi-agent-detail.drawio  plan.md  review.md  tasks.md
vscode-extension/: .env.example  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  panel.ts  receiver.ts
watch-app/AgentController/AgentController/: AgentControllerApp.swift  ContentView.swift
watch-app/AgentController/AgentController Watch App/: AgentControllerApp.swift  ContentView.swift
watch-app/AgentController/AgentController.xcodeproj/: project.pbxproj
