[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awsiotsdk>=1.28.1",
    "boto3>=1.35.0",
    "fastapi>=0.134.0",
    "langchain-aws>=0.2.0",
    "langgraph>=1.0.10",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]
